Continues the development.

--- a/app/views/lib/person.html
+++ b/app/views/lib/person.html
@@ -23,10 +23,10 @@
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptOthers" translate="Common.Others">Others</label>
+			<label class="control-label col-sm-2" for="iptOthers" translate="Common.Other">Other</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptOthers" ng-readonly="ActivityID == 3"
-						placeholder="{{'Common.Others' | translate}}" ng-model="PersonObject.Others" required>
+						placeholder="{{'Common.Other' | translate}}" ng-model="PersonObject.Others" required>
 			</div>
 		</div>
 
