--- a/app/views/lib/personlist.html
+++ b/app/views/lib/personlist.html
@@ -27,7 +27,7 @@
 				<th></th>
 				<th st-sort="id" translate="Common.ID">ID</th>
 				<th st-sort="name" translate="Common.Name">Name</th>
-				<th st-sort="dtl" translate="Common.Others">Others</th>
+				<th st-sort="dtl" translate="Common.Other">Others</th>
 				<th translate="Common.Operations">Operations</th>
 			</tr>
 			<tr>
@@ -39,7 +39,7 @@
 		<tbody>
 			<tr ng-repeat="row in dispList">
 				<td cs-select="row"></td>
-				<td><a ng-href="#/home/lib/loc/display/{{row.ID}}"> {{row.ID}} </a></td>
+				<td><a ng-href="#/home/lib/person/display/{{row.ID}}"> {{row.ID}} </a></td>
 				<td>{{row.Name}}</td>
 				<td>{{row.Others | limitTo: 20}}</td>
 				<td>
