--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -14,6 +14,9 @@
 			</div>
 		</div>
 		
+		<div class="form-group">
+			
+		</div>
 
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDetail" translate="Common.Detail">Detail</label>
