--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -10,21 +10,153 @@
 			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="LocationObject.ID">
+					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="BookObject.ID">
 			</div>
 		</div>
 		
 		<div class="form-group">
-			
-		</div>
-
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptDetail" translate="Common.Detail">Detail</label>
+			<label class="control-label col-sm-2" for="iptISBN" >ISBN</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptDetail" ng-readonly="ActivityID == 3"
-						placeholder="{{'Common.Detail' | translate}}" ng-model="LocationObject.Detail" required>
+				<input type="text" class="form-control" id="iptISBN"
+					placeholder="{{'Common.ID' | translate}}" ng-model="BookObject.ISBN">
 			</div>
 		</div>
+        
+        <!-- Name -->
+        <div class="panel panel-default" style="margin: 30px, 10px;">
+            <div class="panel-heading">{{'Common.Name' | translate}}</div>
+            <div class="panel-body">
+                <!-- Tables -->
+                <table st-table="nameColl" st-saft-src="BookNameCollection" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th st-sort="id" translate="Common.ID">ID</th>
+                            <th st-sort="lang" translate="Common.Language">Lang ID</th>
+                            <th st-sort="langtxt" translate="Common.Language">Language</th>
+                            <th st-sort="name" translate="Common.Name">Name</th>
+                            <th translate="Common.Operations">Operations</th>
+                        </tr>
+                        <tr>
+                            <th colspan="5">
+                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in BookNameCollection">
+                            <td>{{row.ID}}</td>
+                            <td>{{row.Lang}}</td>
+                            <td>{{row.LangName }}</td>
+                            <td>{{row.Name}}</td>
+                            <td>
+                                <button type="button" class="btn btn-sm" ng-click="displayParticipant(row)">
+                                    <i class="glyphicon glyphicon-share">
+                                    </i>
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="editParticipant(row)">
+                                    <i class="glyphicon glyphicon-edit">
+                                    </i>
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="showComparison(row)">
+                                    <i class="glyphicon glyphicon-adjust">
+                                    </i>
+                                </button>
+                                <button type="button" ng-click="removeParticipant(row)" class="btn btn-sm btn-danger">
+                                    <i class="glyphicon glyphicon-remove-circle">
+                                    </i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <br />
+
+                <div class="panel panel-default" style="margin: 30px, 10px;">
+                    <div class="panel-heading">Current Name</div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="iptDetail" translate="Common.Detail">Detail</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="iptDetail" ng-readonly="ActivityID == 3"
+                                        placeholder="{{'Common.Detail' | translate}}" ng-model="LocationObject.Detail" required>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Language -->
+        <div class="panel panel-default" style="margin: 30px, 10px;">
+            <div class="panel-heading">{{'Common.Language' | translate}}</div>
+            <div class="panel-body">
+                <!-- Tables -->
+                <table st-table="langColl" st-saft-src="BookLangCollection" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th st-sort="id" translate="Common.ID">ID</th>
+                            <th st-sort="lang" translate="Common.Language">Lang ID</th>
+                            <th st-sort="langtxt" translate="Common.Language">Language</th>
+                            <th translate="Common.Operations">Operations</th>
+                        </tr>
+                        <tr>
+                            <th colspan="4">
+                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in BookLangCollection">
+                            <td>{{row.ID}}</td>
+                            <td>{{row.Lang}}</td>
+                            <td>{{row.LangName }}</td>
+                            <td>
+                                <button type="button" class="btn btn-sm" ng-click="displayParticipant(row)">
+                                    <i class="glyphicon glyphicon-share">
+                                    </i>
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="editParticipant(row)">
+                                    <i class="glyphicon glyphicon-edit">
+                                    </i>
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="showComparison(row)">
+                                    <i class="glyphicon glyphicon-adjust">
+                                    </i>
+                                </button>
+                                <button type="button" ng-click="removeParticipant(row)" class="btn btn-sm btn-danger">
+                                    <i class="glyphicon glyphicon-remove-circle">
+                                    </i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <br />
+
+                <div class="panel panel-default" style="margin: 30px, 10px;">
+                    <div class="panel-heading">Current Language</div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="iptDetail" translate="Common.Detail">Detail</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="iptDetail" ng-readonly="ActivityID == 3"
+                                        placeholder="{{'Common.Detail' | translate}}" ng-model="LocationObject.Detail" required>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Author -->
+        
+        <!-- Press -->
+        
+        <!-- Location -->
+        
+
 
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
