--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -113,7 +113,7 @@
             <div class="panel-heading">{{'Common.Language' | translate}}</div>
             <div class="panel-body">
                 <!-- Tables -->
-                <table st-table="LangsCollection" st-saft-src="BookObject.Langs" class="table table-striped table-hover">
+                <table st-table="LangsCollection" st-saft-src="BookObject.Languages" class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <th st-sort="lang" translate="Common.Language">Lang ID</th>
@@ -175,6 +175,70 @@
         </div>
         
         <!-- Author -->
+        <div class="panel panel-default" style="margin: 30px, 10px;">
+            <div class="panel-heading">{{'Lib.Author' | translate}}</div>
+            <div class="panel-body">
+                <!-- Tables -->
+                <table st-table="LangsCollection" st-saft-src="BookObject.Langs" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th st-sort="lang" translate="Common.Language">Lang ID</th>
+                            <th st-sort="langtxt" translate="Common.Language">Language</th>
+                            <th translate="Common.Operations">Operations</th>
+                        </tr>
+                        <tr>
+                            <th colspan="3">
+                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in LangsCollection">
+                            <td>{{row.Lang}}</td>
+                            <td>{{row.LangName}}</td>
+                            <td>
+                                <button type="button" class="btn btn-sm" ng-click="displayLang(row)">
+                                    <i class="glyphicon glyphicon-share">
+                                    </i>
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="editLang(row)">
+                                    <i class="glyphicon glyphicon-edit">
+                                    </i>
+                                </button>
+                                <button type="button" ng-click="removeLang(row)" class="btn btn-sm btn-danger">
+                                    <i class="glyphicon glyphicon-remove-circle">
+                                    </i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <br />
+
+                <div class="panel panel-default" style="margin: 30px, 10px;">
+                    <div class="panel-heading">Current Language | <span>{{LangActivity | translate}}</span></div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" translate="Common.Detail">Detail</label>
+                            <div class="col-sm-10">
+                                <selectize placeholder='Pick language...' options='arLibLang' config="langLangConfig" ng-model="SelectedLangObject.Lang"
+                                        ng-disabled="ActivityID == 3" required="required"></selectize>
+                            </div>
+                        </div>
+
+                        <!-- Button group -->
+                        <div class="form-group">
+                            <div class="col-sm-10">
+                                <button class="btn btn-default btn-primary" ng-click="saveCurrentLang()" ng-hide="ActivityID == 3"
+                                    translate="Finance.SaveCurrentItem">Save Item</button>
+                                <button class="btn btn-danger" ng-click="cancelCurrentLang()" translate="Finance.CancelItemEditing">Cancel Item Editing</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         
         <!-- Press -->
         
